Services/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 30036
      targetPort: 8080
      name: http
  selector:
    app: myapp
